--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
 [submodule "public"]
 	path = public
-	url = git@github.com:frank0434/frank0434.github.io.git
+	url = https://github.com/frank0434/frank0434.github.io.git
